k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-demo
  labels:
    app: quarkus-demo
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: quarkus-demo
